k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: application
  labels:
    app: myapp
    environment: dev
